crates/vexor-compiler/tests/golden/error/output/circle_arity.err
Error: evaluation error
   ╭─[ input:2:9 ]
   │
 2 │ val c = Circle(10, 20)
   │         ───────┬──────  
   │                ╰──────── expected one argument
───╯
